[ci] Add java 17 pipeline for java ut and it.